# stonne

./: .gitignore  LICENSE  README.md
stonne/: .clang-format  .gitignore  CMakeLists.txt  Makefile  checkTileGenerationPrecision.py  commands_example.sh  json_tutorial.txt  probar_casos.sh  results-outputs_M128-N128-K128-ms32  results-outputs_M128-N128-K128-ms64  results-outputs_M16-N16-K16-ms16  results-outputs_M16-N16-K16-ms256  results-outputs_M256-N256-K256-ms32  results-outputs_M64-N64-K64-ms16  results.csv  test  vcpkg.json
stonne/doc/: CMakeLists.txt
stonne/energy_tables/: .out  calculate_energy.py  energy_model.txt  out
stonne/include/: ASNetwork.h  ASwitch.h  AccumulationBuffer.h  Accumulator.h  CollectionBus.h  CollectionBusLine.h  CompilerART.h  CompilerComponent.h  CompilerFEN.h  CompilerMSN.h  CompilerMultiplierMesh.h  Component.h  Config.h  Connection.h  DNNLayer.h  DNNModel.h  DSNetwork.h  DSNetworkTop.h  DSwitch.h  DataPackage.h  DistributionNetwork.h  FEASwitch.h  FENetwork.h  Fifo.h  GustavsonsSpGEMMSDMemory.h  LookupTable.h  MSNetwork.h  MSwitch.h  Memory.h  MemoryController.h  MultiplierNetwork.h  MultiplierOS.h  OSMeshMN.h  OSMeshSDMemory.h  OuterLoopSpGEMMSDMemory.h  PoolSDMemory.h  ReduceNetwork.h  SDMemory.h  STONNEModel.h  STONNEModel.hpp  (+17 more)
stonne/include/TileGenerator/: TileGenerator.h  Tiles.h  mRNA_Generator.h
stonne/include/TileGenerator/MyGenerator/: MyGenerator.h  TileOption.h
stonne/include/TileGenerator/StonneMapper/: StonneMapperGenerator.h  TileOption.h  TileOptionDenseGemm.h  TileOptionSparseDense.h  utility.h
stonne/include/TileGenerator/Utils/: Target.h  Tiles.h
stonne/include/TileGenerator/mRNA/: Analyzer.h  DNNModel.h  DSNetwork.h  MAERIModel.h  MSNetwork.h  MappingStrategy.h  MrnaGenerator.h  RSNetwork.h  SDMemory.h  VNAT.h  define.h  utility.h
stonne/include/comm/: DataPackage.hpp
stonne/include/common/: Config.hpp  Stats.hpp  types.hpp  utility.hpp
stonne/include/mRNA/: Analyzer.h  DNNModel.h  DSNetwork.h  MSNetwork.h  RSNetwork.h  define.h
stonne/include/memory/: Memory.hpp  SimpleMem.hpp
stonne/include/stonne/: STONNEModel.hpp
stonne/include/tile_generator/: tile.hpp  types.hpp
stonne/lib/: CMakeLists.txt  STONNEModel.cpp
stonne/lib/comm/: CollectionBus.cpp  CollectionBus.hpp  CollectionBusLine.cpp  CollectionBusLine.hpp  Connection.cpp  Connection.hpp  DataPackage.cpp  DataPackage.hpp
stonne/lib/common/: Config.cpp  Fifo.cpp  Fifo.hpp  Stats.cpp  Unit.hpp  utility.cpp  utility.hpp
stonne/lib/common/dnn/: DNNLayer.cpp  DNNLayer.hpp  DNNModel.cpp  DNNModel.hpp  Tile.cpp  Tile.hpp
stonne/lib/compiler/: CompilerART.cpp  CompilerART.hpp  CompilerComponent.hpp  CompilerFEN.cpp  CompilerFEN.hpp  CompilerMSN.cpp  CompilerMSN.hpp  CompilerMultiplierMesh.cpp  CompilerMultiplierMesh.hpp
stonne/lib/memctrl/: GustavsonsSpGEMMSDMemory.cpp  GustavsonsSpGEMMSDMemory.hpp  MemoryController.hpp  OSMeshMN.cpp  OSMeshMN.hpp  OSMeshSDMemory.cpp  OSMeshSDMemory.hpp  OuterLoopSpGEMMSDMemory.cpp  OuterLoopSpGEMMSDMemory.hpp  SDMemory.cpp  SDMemory.hpp  SparseDenseSDMemory.cpp  SparseDenseSDMemory.hpp  SparseSDMemory.cpp  SparseSDMemory.hpp
stonne/lib/memory/: AccumulationBuffer.cpp  AccumulationBuffer.hpp  Accumulator.cpp  Accumulator.hpp  LookupTable.cpp  LookupTable.hpp  Memory.hpp
stonne/lib/network/dn/: DSNetwork.cpp  DSNetwork.hpp  DSNetworkTop.cpp  DSNetworkTop.hpp  DistributionNetwork.hpp
stonne/lib/network/mn/: MSNetwork.cpp  MSNetwork.hpp  MultiplierOS.cpp  (+6 more)
stonne/lib/tile_generator/: TileGenerator.cpp  TileGenerator.hpp
stonne/parameters/: mRNA_energy_parameters.txt
stonne/src/: ASNetwork.cpp  ASwitch.cpp  AccumulationBuffer.cpp  Accumulator.cpp  CMakeLists.txt  CollectionBus.cpp  CollectionBusLine.cpp  CompilerART.cpp  CompilerFEN.cpp  CompilerMSN.cpp  CompilerMultiplierMesh.cpp  Config.cpp  Connection.cpp  DNNLayer.cpp  DNNModel.cpp  DSNetwork.cpp  DSNetworkTop.cpp  DSwitch.cpp  DataPackage.cpp  FEASwitch.cpp  FENetwork.cpp  Fifo.cpp  GustavsonsSpGEMMSDMemory.cpp  LookupTable.cpp  MSNetwork.cpp  MSwitch.cpp  MultiplierOS.cpp  OSMeshMN.cpp  OSMeshSDMemory.cpp  OuterLoopSpGEMMSDMemory.cpp  PoolSDMemory.cpp  SDMemory.cpp  STONNEModel.cpp  SnapeaSDMemory.cpp  SparseDenseSDMemory.cpp  SparseFlex_ASNetwork.cpp  SparseFlex_ASwitch.cpp  SparseFlex_MSNetwork.cpp  SparseFlex_MSwitch.cpp  SparseSDMemory.cpp  (+9 more)
stonne/src/TileGenerator/: TileGenerator.cpp  mRNA_Generator.cpp
stonne/src/mRNA/: Analyzer.cpp  DNNModel.cpp  DSNetwork.cpp  MAERIModel.cpp  MSNetwork.cpp  MappingStrategy.cpp  RSNetwork.cpp  SDMemory.cpp  VNAT.cpp
stonne/src/stonne/: ASNetwork.cpp  ASNetwork.hpp  ASwitch.cpp  ASwitch.hpp  AccumulationBuffer.cpp  AccumulationBuffer.hpp  Accumulator.cpp  Accumulator.hpp  CMakeLists.txt  CollectionBus.cpp  CollectionBus.hpp  CollectionBusLine.cpp  CollectionBusLine.hpp  CompilerART.cpp  CompilerART.hpp  CompilerComponent.hpp  CompilerFEN.cpp  CompilerFEN.hpp  CompilerMSN.cpp  CompilerMSN.hpp  CompilerMultiplierMesh.cpp  CompilerMultiplierMesh.hpp  Component.hpp  Config.hpp  Connection.hpp  DNNLayer.cpp  DNNLayer.hpp  DNNModel.hpp  DSNetwork.cpp  DSNetwork.hpp  DSNetworkTop.cpp  DSNetworkTop.hpp  DSwitch.cpp  DSwitch.hpp  DataPackage.cpp  DataPackage.hpp  DistributionNetwork.hpp  FEASwitch.cpp  FEASwitch.hpp  FENetwork.cpp  (+50 more)
stonne/src/stonne_cli/: CMakeLists.txt  stonne_cli.cpp
stonne/stonne_linker_src/: stonne_linker.cpp  stonne_linker.h
stonne/tests/: CMakeLists.txt
stonne/tests/TileGenerator/: Test_MyGenerator.py
stonne/tests/sim/: Conv.cpp  DenseGEMM.cpp  GustavsonGEMM.cpp  InnerProductGEMM.cpp  OuterProductGEMM.cpp  SparseDense.cpp  large_conv.cpp  large_densegemm.cpp  large_gustavsongemm.cpp  large_innerproductgemm.cpp  large_outerproductgemm.cpp  small_conv.cpp  small_densegemm.cpp  small_gustavsongemm.cpp  small_innerproductgemm.cpp  small_outerproductgemm.cpp  small_sparsedense.cpp  small_sparsegemm.cpp  utils.hpp
stonne/tiles/: tile_configuration.txt
stonne/tiles/alexnet/: tile_configuration_conv1.txt  tile_configuration_conv2.txt  tile_configuration_conv3.txt  tile_configuration_fc8.txt
(+221 files in other folders)
